nav link spacing fixed on smartphone view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -106,6 +106,6 @@ main{
 	.rating{height: 25px;}
    
 }
-@media screen and (max-width: 770px){
+@media screen and (max-width: 600px){
 	nav .container{padding: 0;}
 }
